Update tests for the bdo element and remove time_datetime.html
because the checkpoints in time_datetime.html have been covered in
html/dom/interfaces.html and
html/semantics/text-level-semantics/the-time-element/001.html

--- a/html/semantics/text-level-semantics/the-bdo-element/bdo_rtl.html
+++ b/html/semantics/text-level-semantics/the-bdo-element/bdo_rtl.html
@@ -5,11 +5,12 @@
     <title>HTML Test: bdo_rtl</title>
     <link rel="author" title="Intel" href="http://www.intel.com/">
     <link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/text-level-semantics.html#the-bdo-element">
-    <link rel="match" href="./support/bdo_element_ref.html">
+    <link rel="match" href="bdo_element_ref.html">
     <meta name="content" content="Check if the value rtl of dir attribute specifies a right-to-left override">
   </head>
   <body>
-    <p>Test passes if the text is 'ABCDEF' below.</p>
+    <p>Test passes if there is a text 'ABCDEF'.</p>
     <bdo dir="rtl">FEDCBA</bdo>
   </body>
 </html>
+
