--- a/html/semantics/text-level-semantics/the-bdo-element/bdo_element_ref.html
+++ b/html/semantics/text-level-semantics/the-bdo-element/bdo_element_ref.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>BDO Reference</title>
+    <title>HTML Test: Reference for the bdo element</title>
     <link rel="author" title="Intel" href="http://www.intel.com/">
   </head>
   <body>
-    <p>Test passes if the text is 'ABCDEF' below.</p>
+    <p>Test passes if there is a text 'ABCDEF'.</p>
     <span>ABCDEF</span>
   </body>
 </html>
+
