--- a/html/semantics/text-level-semantics/the-bdo-element/bdo_override.html
+++ b/html/semantics/text-level-semantics/the-bdo-element/bdo_override.html
@@ -5,14 +5,15 @@
     <title>HTML Test: bdo_override</title>
     <link rel="author" title="Intel" href="http://www.intel.com/">
     <link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/text-level-semantics.html#the-bdo-element">
-    <link rel="match" href="./support/bdo_element_ref.html">
+    <link rel="match" href="bdo_element_ref.html">
     <meta name="assert" content="Check if authors could override the Unicode bidirectional algorithm
-    by explicitly specifying a direction override of bdo element">
+        by explicitly specifying a direction override of bdo element">
   </head>
   <body>
-    <p>Test passes if the following text is 'ABCDEF'.</p>
+    <p>Test passes if there is a text 'ABCDEF'.</p>
     <p>
       &#x202E;<bdo dir="ltr">ABCDEF</bdo>&#x202C;
     </p>
   </body>
 </html>
+
