rename resources dir

--- a/contributors/adobe/submitted/css-compositing/background-blending/background-blend-mode-gradient-image.html
+++ b/contributors/adobe/submitted/css-compositing/background-blending/background-blend-mode-gradient-image.html
@@ -12,7 +12,7 @@
 		        margin: 5px;
 		        width: 130px;
 		        height: 130px;
-		        background:  url('resources/red.png') no-repeat 0 0 /100% 100%, -webkit-linear-gradient(top, yellow 50%, green 51%);
+		        background:  url('support/red.png') no-repeat 0 0 /100% 100%, -webkit-linear-gradient(top, yellow 50%, green 51%);
 		        display: block;
 		        float: left;
 		        background-blend-mode: screen, normal;
