Update tests for the base element a litte, and remove the link tests
- onerror checkpoint in link_events.html is covered by link-style-error-01.html
- link_type_mismatch_source.html uses setTimeout(); moreover, it won't fail
  even the feature is not implemented.

--- a/html/semantics/document-metadata/the-base-element/base_href_empty.html
+++ b/html/semantics/document-metadata/the-base-element/base_href_empty.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="log"></div>
-    <img id="test" src="../../../../images/blue-100x100.png" style="display:none">
+    <img id="test" src="/images/blue-100x100.png" style="display:none">
 
     <script>
       var testElement,
@@ -33,3 +33,4 @@
     </script>
   </body>
 </html>
+
