--- a/html/semantics/document-metadata/the-base-element/base_href_unspecified.html
+++ b/html/semantics/document-metadata/the-base-element/base_href_unspecified.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div id="log"></div>
-    <img id="test" src="../../../../images/blue-100x100.png" style="display:none">
+    <img id="test" src="/images/blue-100x100.png" style="display:none">
     <a id="test1" href="\u0000"></a>
     <script>
       var testElement,
@@ -34,3 +34,4 @@
     </script>
   </body>
 </html>
+
