--- a/html/semantics/document-metadata/the-base-element/support/example.html
+++ b/html/semantics/document-metadata/the-base-element/support/example.html
@@ -6,6 +6,7 @@
     <link rel="author" title="Intel" href="http://www.intel.com/">
   </head>
   <body>
-    <div>This is a example page.</div>
+    <div>PASS</div>
   </body>
 </html>
+
