Refine tests for the embed element
- Add _manual suffix to reftest filename
- Add a reference file embed_represent_nothing_ref.html
- Remove embed_pass_parameters.html and embed_type_unmatch.html
  as not good design

--- a/html/semantics/embedded-content-0/the-embed-element/embed_dimension_attributes.html
+++ b/html/semantics/embedded-content-0/the-embed-element/embed_dimension_attributes.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="log"></div>
-    <embed id="ebd" src="../../../../images/blue.png" height="100" width="100" style="display:none">
+    <embed id="ebd" src="/images/blue.png" height="100" width="100" style="display:none">
     <script>
       var embed;
       setup(function() {
@@ -29,3 +29,4 @@
     </script>
   </body>
 </html>
+
