--- a/html/semantics/embedded-content-0/the-embed-element/embed_represent_nothing_ref.html
+++ b/html/semantics/embedded-content-0/the-embed-element/embed_represent_nothing_ref.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>HTML Reference File</title>
+    <title>HTML Reftest Reference</title>
     <link rel="author" title="Intel" href="http://www.intel.com">
   </head>
   <body>
-    <p>Test passes if there is a blue filled square.</p>
-    <img src="../../../../../images/blue-100x100.png">
+    <p>Test passes if there is <strong>no red</strong>.</p>
   </body>
 </html>
+
