--- a/html/semantics/embedded-content-0/the-embed-element/embed_dimension_attributes_manual.html
+++ b/html/semantics/embedded-content-0/the-embed-element/embed_dimension_attributes_manual.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>HTML Test: embed_dimension_attributes_visual</title>
+    <title>HTML Test: embed_dimension_attributes_manual</title>
     <link rel="author" title="Intel" href="http://www.intel.com">
     <link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/embedded-content-0.html#the-embed-element">
+    <link rel="match" href="embed_dimension_attributes_ref.html">
     <meta name="content" content="Check if the embed element supports dimension attributes">
-    <link rel="match" href="./support/embed_dimension_attributes_ref.html">
   </head>
   <body>
-    <p>Test passes if there is a blue filled square.</p>
-    <embed src="../../../../images/blue.png" height="100" width="100">
+    <p>Test passes if there is a filled blue square.</p>
+    <embed src="/images/blue.png" height="100" width="100">
   </body>
 </html>
+
