--- a/html/semantics/document-metadata/the-meta-element/meta_content_missing.html
+++ b/html/semantics/document-metadata/the-meta-element/meta_content_missing.html
@@ -8,7 +8,7 @@
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
     <meta name="description" id="meta">
-    <meta name="asssert" content="Check if the value of content attribute is empty string when the attribute is missing.">
+    <meta name="assert" content="Check if the value of content attribute is empty string when the attribute is missing.">
   </head>
   <body>
     <div id="log"></div>
