Adress review comments

--- a/contributors/adobe/submitted/css-compositing/background-blending/background-blend-mode-gradient-image.html
+++ b/contributors/adobe/submitted/css-compositing/background-blending/background-blend-mode-gradient-image.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CSS Test: background-blend-mode between gradient and image</title>
-		<link rel="author" title="MIRELA BUDAES" href="mbudaes@adobe.com">
+		<title>CSS Compositing and Blending Test: blending between multiple backgrounds (gradient and image) using background-blend-mode</title>
+		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#background-blend-mode">
 		<meta name="flags" content="">
-		<meta name="assert" content="Test checks the background-blend-mode between gradient and image.">
+		<meta name="assert" content="Test checks that setting background-blend-mode property for an element with two background layers (a gradient and a png image) results in blending between the two layers.">
 		<link rel="match" href="reference/background-blend-mode-gradient-image-ref.html">
 		<style>
 		    div {
 		        margin: 5px;
 		        width: 130px;
 		        height: 130px;
-		        background:  url('support/red.png') no-repeat 0 0 /100% 100%, linear-gradient(top, yellow 50%, green 51%);
+		        background:  url('support/red.png') no-repeat 0 0 /100% 100%, linear-gradient(top, rgb(255, 255, 1) 50%, rgb(2,131,2) 51%);
 		        display: block;
 		        float: left;
 		        background-blend-mode: screen, normal;
@@ -20,7 +20,8 @@
 		</style>
 	</head>
 	<body>
-		<p>Test passes if there is no red on the screen.</p>
+		<p>Test passes if there is no red square on the screen
+			An yellow and and orage square are expected.</p>
 	    <div></div>
 	</body>
 </html>
