--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-stacking-context-001.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-stacking-context-001.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CSS Test: CSS Blending - mix-blend-mode stacking context</title>
-		<link rel="author" title="MIRELA BUDAES" href="mbudaes@adobe.com">
+		<title>CSS Compositing and Blending Test: mix-blend-mode between a parent and a child element</title>
+		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="">
-		<meta name="assert" content="Test checks that the element with mix-blend-mode and opacity blends with the parent stacking context">
+		<meta name="assert" content="Test checks that the element with mix-blend-mode and opacity blends with the parent element">
 		<link rel="match" href="reference/mix-blend-mode-stacking-context-001-ref.html">
 		<style>
-
 			.simple{
-			    background: green ;
+			    background: rgb(2,131,2) ;
 				width: 140px;
 				height: 140px;
 				display:inline-block;
 			}
-
 			.mixed {
 				opacity: 0.9;
-				background: red;
+				background: rgb(255,5,5);
 				margin-top: 20px;
 				margin-left: 20px;
 				width: 100px;
 				height: 100px;
+				mix-blend-mode: multiply;
 				}
-
 		</style>
 	</head>
 	<body>
-		<p>This test passes if there is no red on the page</p>
+		<p>Test passes if you see a black rectangle with large green borders.
+		You should not see a red rectangle on the page. </p>
 		<div class="simple">
-			<div class="mixed" style="mix-blend-mode: multiply"></div>
+			<div class="mixed"></div>
 		</div>
 	</body>
 </html>
