--- a/contributors/adobe/submitted/css-compositing/svg/mix-blend-mode-svg-rectangle.html
+++ b/contributors/adobe/submitted/css-compositing/svg/mix-blend-mode-svg-rectangle.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CSS Test: CSS Blending - mix-blend-mode for a simple SVG element - rectangle</title>
-		<link rel="author" title="MIRELA BUDAES" href="mbudaes@adobe.com">
+		<title>CSS Compositing and Blending Test: mix-blend-mode for a simple SVG element - rectangle</title>
+		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#csscompositingrules_SVG">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
-		<meta name="flags" content="">
+		<meta name="flags" content="svg">
 		<link rel="match" href="reference/mix-blend-mode-svg-rectangle-ref.html">
-	    <style type="text/css">
-	    svg {
-	        width: 100px;
-	        height: 100px;
-	    }
-	    </style>
 	</head>
 	<body>
-		<p>There should be no red on the screen</p>
+		<p>There should be no red rectangle on the screen. <br>
+		   Test pases for an orange rectangle.</p>
 		<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="400px" height="400px" >
-			<rect x="0" y="0" width="100" height="100" fill="green"/>
-			<rect x="0" y="0" width="100" height="100" fill="red" style="mix-blend-mode: difference"/>
+			<rect x="0" y="0" width="100" height="100" fill="rgb(2,131,2)"/>
+			<rect x="0" y="0" width="100" height="100" fill="rgb(255,5,5)" style="mix-blend-mode: difference"/>
 		</svg>
 	</body>
 </html>
