Cleanup some idlharness tests and make it clearer what they test.

--- a/IndexedDB/submissions/Opera/non-finished/interfaces.html
+++ b/IndexedDB/submissions/Opera/non-finished/interfaces.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <meta charset=utf-8>
-<title>DOM4 IDL tests</title>
-<div id=log></div>
+<title>IndexedDB IDL tests</title>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
 <script src=/resources/WebIDLParser.js></script>
 <script src=/resources/idlharness.js></script>
+
+<h1>IndexedDB IDL tests</h1>
+<div id=log></div>
+
 <script src=support.js></script>
 <script type=text/plain>
 
@@ -282,4 +285,3 @@ idlArray.add_objects({
 });
 idlArray.test();
 </script>
-<p> WAT?
