--- a/XMLHttpRequest/tests/submissions/Ms2ger/interfaces.html
+++ b/XMLHttpRequest/tests/submissions/Ms2ger/interfaces.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>XMLHttpRequest IDL tests</title>
-<div id=log></div>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
 <script src=/resources/WebIDLParser.js></script>
 <script src=/resources/idlharness.js></script>
+
+<h1>XMLHttpRequest IDL tests</h1>
+<div id=log></div>
+
 <script type=text/plain class=untested>
 interface EventTarget {
   void addEventListener(DOMString type, EventListener? callback, optional boolean capture /* = false */);
