--- a/html/dom/interfaces.html
+++ b/html/dom/interfaces.html
@@ -1,11 +1,15 @@
 <!doctype html>
-<title>HTML IDL tests</title>
+<meta charset=utf-8>
 <!-- WARNING: These tests are preliminary and probably partly incorrect.  -->
-<div id=log></div>
+<title>HTML IDL tests</title>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
 <script src=/resources/WebIDLParser.js></script>
 <script src=/resources/idlharness.js></script>
+
+<h1>HTML IDL tests</h1>
+<div id=log></div>
+
 <!-- URL IDLs -->
 <script type=text/plain class=untested>
 [Constructor(DOMString url, optional (URL or DOMString) base = "about:blank")]
