--- a/page-visibility/idlharness.html
+++ b/page-visibility/idlharness.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8" />
-<title>idlharness test</title>
+<meta charset="utf-8">
+<title>Page Visibility IDL tests</title>
 <link rel="author" title="W3C" href="http://www.w3.org/" />
 <link rel="help" href="http://www.w3.org/TR/page-visibility/#sec-document-interface"/>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
-<script src="/webidl2.js/lib/webidl2.js"></script>
+<script src="/resources/WebIDLParser.js"></script>
 <script src="/resources/idlharness.js"></script>
 </head>
 <body>
-<h1>idlharness test</h1>
-<p>This test validates the WebIDL included in the Page Visibility specification.</p>
+<h1>Page Visibility IDL tests</h1>
 
 <pre id='untested_idl' style='display:none'>
 interface Document {
