--- a/navigation-timing/idlharness.html
+++ b/navigation-timing/idlharness.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8" />
-<title>idlharness test</title>
+<meta charset="utf-8">
+<title>Navigation Timing IDL tests</title>
 <link rel="author" title="W3C" href="http://www.w3.org/" />
 <link rel="help" href="http://www.w3.org/TR/navigation-timing/#sec-navigation-timing-interface"/>
 <link rel="help" href="http://www.w3.org/TR/navigation-timing/#sec-navigation-info-interface"/>
@@ -13,8 +13,8 @@
 <script src="/resources/idlharness.js"></script>
 </head>
 <body>
-<h1>idlharness test</h1>
-<p>This test validates the WebIDL included in the Navigation Timing specification.</p>
+<h1>Navigation Timing IDL tests</h1>
+<div id="log"></div>
 
 <pre id='untested_idl' style='display:none'>
 
@@ -82,8 +82,5 @@ partial interface Window {
   idl_array.test();
 })();
 </script>
-
-<div id="log"></div>
-
 </body>
 </html>
