--- a/performance-timeline/idlharness.html
+++ b/performance-timeline/idlharness.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8" />
-<title>idlharness test</title>
+<meta charset="utf-8">
+<title>Performance Timeline IDL tests</title>
 <link rel="author" title="W3C" href="http://www.w3.org/" />
 <link rel="help" href="http://www.w3.org/TR/performance-timeline/#performanceentry"/>
 <link rel="help" href="http://www.w3.org/TR/performance-timeline/#performance"/>
 <link rel="help" href="http://www.w3.org/TR/performance-timeline/#performanceentrylist"/>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
-<script src="/resources/webidl2/lib/webidl2.js"></script>
+<script src="/resources/WebIDLParser.js"></script>
 <script src="/resources/idlharness.js"></script>
 </head>
 <body>
-<h1>idlharness test</h1>
-<p>This test validates the WebIDL included in the Performance Timeline specification.</p>
+<h1>Performance Timeline IDL tests</h1>
+<div id="log"></div>
 
 <pre id='untested_idl' style='display:none'>
 interface Performance {
@@ -52,8 +52,5 @@ typedef sequence &lt;PerformanceEntry> PerformanceEntryList;
 })();
 
 </script>
-
-<div id="log"></div>
-
 </body>
 </html>
