--- a/user-timing/idlharness.html
+++ b/user-timing/idlharness.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8" />
-<title>idlharness test</title>
+<meta charset="utf-8">
+<title>User Timing IDL tests</title>
 <link rel="author" title="W3C" href="http://www.w3.org/" />
 <link rel="help" href="http://www.w3.org/TR/user-timing/#extensions-performance-interface"/>
 <link rel="help" href="http://www.w3.org/TR/user-timing/#performancemark"/>
 <link rel="help" href="http://www.w3.org/TR/user-timing/#performancemeasure"/>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
-<script src="/resources/webidl2/lib/webidl2.js"></script>
+<script src="/resources/WebIDLParser.js"></script>
 <script src="/resources/idlharness.js"></script>
 </head>
 <body>
-<h1>idlharness test</h1>
-<p>This test validates the WebIDL included in the user Timing specification.</p>
+<h1>User Timing IDL tests</h1>
+<div id="log"></div>
 
 <pre id='untested_idl' style='display:none'>
 interface Performance {
@@ -55,8 +55,5 @@ interface PerformanceMeasure : PerformanceEntry {
 })();
 
 </script>
-
-<div id="log"></div>
-
 </body>
 </html>
