--- a/webstorage/idlharness.html
+++ b/webstorage/idlharness.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8" />
-<title>idlharness test</title>
+<meta charset="utf-8">
+<title>Web Storage IDL tests</title>
 <link rel="author" title="W3C" href="http://www.w3.org/" />
 <link rel="help" href="http://www.w3.org/TR/webstorage/#storage"/>
 <script src="/resources/testharness.js"></script>
@@ -11,8 +11,8 @@
 <script src="/resources/idlharness.js"></script>
 </head>
 <body>
-<h1>idlharness test</h1>
-<p>This test validates the WebIDL included in the Web Storage specification.</p>
+<h1>Web Storage IDL tests</h1>
+<div id="log"></div>
 
 <pre id='untested_idl' style='display:none'>
 interface Window {
@@ -76,8 +76,5 @@ dictionary StorageEventInit : EventInit {
 })();
 
 </script>
-
-<div id="log"></div>
-
 </body>
 </html>
