--- a/html/semantics/document-metadata/styling/LinkStyle.html
+++ b/html/semantics/document-metadata/styling/LinkStyle.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>HTML Test: Link_Style</title>
+    <title>HTML Test: Styling</title>
     <link rel="author" title="Intel" href="http://www.intel.com/">
     <link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/document-metadata.html#styling">
     <link id="style1" rel="text" title="Intel" href="./support/unmatch.css">
@@ -14,13 +14,13 @@
     <script src="/resources/testharnessreport.js"></script>
     <style id="style4" type="text/html">
       #test {
-        height:100px;
-        width:100px;
+        height: 100px;
+        width: 100px;
       }
     </style>
     <style id="style7" type="text/css" media="all" title="./support/alternate.css">
       #test {
-        background-color:green;
+        background-color: green;
       }
     </style>
   </head>
@@ -29,41 +29,38 @@
     <div id="test" style="display:none">STYLING TEST</div>
 
     <script>
-      var styles = [];
       test(function() {
-        for (var i = 0; i < 4; i++) {
-          styles[i] = document.getElementById("style" + (i + 1));
-          assert_equals(styles[i].sheet, null, "The 'linkStyle' of style" + (i + 1) + " should be null.");
-          assert_false(styles[i].disabled, "The disabled attribute of style" + (i + 1) + " should be fasle");
+        var style = null,
+            i;
+        for (i = 0; i < 4; i++) {
+          style = document.getElementById("style" + (i + 1));
+          assert_equals(style.sheet, null, "The 'linkStyle' of style" + (i + 1) + " should be null.");
+          assert_false(style.disabled, "The disabled attribute of style" + (i + 1) + " should be fasle");
         }
-      }, "Link_Style_return_null");
+      }, "The LinkStyle interface's sheet attribute must return null; the disabled attribute must be false");
 
       test(function() {
-        var styles = [];
-        for (var i = 4; i < 7; i++) {
-          styles[i] = document.getElementById("style" + (i + 1));
-          assert_true(styles[i].sheet instanceof StyleSheet, "The linkStyle of style" + (i + 1) + " should be a StyleSheet object.");
-          assert_equals(styles[i].disabled, styles[i].sheet.disabled, "The disabled attribute" + (i + 1) + " should equal to the same attribute of StyleSheet.");
+        var style = null,
+            i;
+        for (i = 4; i < 7; i++) {
+          style = document.getElementById("style" + (i + 1));
+          assert_true(style.sheet instanceof StyleSheet, "The linkStyle of style" + (i + 1) + " should be a StyleSheet object.");
+          assert_equals(style.disabled, style.sheet.disabled, "The disabled attribute" + (i + 1) + " should equal to the same attribute of StyleSheet.");
         }
-      }, "Link_Style_return_StyleSheet");
+      }, "The LinkStyle interface's sheet attribute must return StyleSheet object; the disabled attribute must be same as the StyleSheet's disabled attribute");
 
       test(function() {
-        var style2 = document.getElementById("style2");
-        var style5 = document.getElementById("style5");
-        var style6 = document.getElementById("style6");
-        var style6 = document.getElementById("style7");
-        assert_equals(style2.title, "", "The title attribute of style2 is incorrect.");
-        assert_equals(style5.title, "", "The title attribute of style5 is incorrect.");
-        assert_equals(style6.title, "./support/alternate.css", "The title attribute is incorrect.");
-        assert_equals(style7.title, "./support/alternate.css", "The title attribute is incorrect.");
-      }, "Link_Style_title");
+        assert_equals(document.getElementById("style2").title, "", "The title attribute of style2 is incorrect.");
+        assert_equals(document.getElementById("style5").title, "", "The title attribute of style5 is incorrect.");
+        assert_equals(document.getElementById("style6").title, "./support/alternate.css", "The title attribute is incorrect.");
+        assert_equals(document.getElementById("style7").title, "./support/alternate.css", "The title attribute is incorrect.");
+      }, "The title must be the same as the value of the element's title content attribute");
 
       test(function() {
-        var style5 = document.getElementById("style5");
-        var style7 = document.getElementById("style7");
-        assert_equals(style5.media, "", "The media attribute of style5 is incorrect.");
-        assert_equals(style7.media, "all", "The title attribute is incorrect.");
-      }, "Link_Style_media");
+        assert_equals(document.getElementById("style5").media, "", "The media attribute of style5 is incorrect.");
+        assert_equals(document.getElementById("style7").media, "all", "The media attribute of style7 is incorrect.");
+      }, "The media must be the same as the value of the element's media content attribute, or the empty string if it is omitted");
     </script>
   </body>
 </html>
+
