--- a/html/semantics/document-metadata/the-style-element/style_scoped.html
+++ b/html/semantics/document-metadata/the-style-element/style_scoped.html
@@ -2,13 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>HTML Test: style_scoped</title>
+    <title>HTML Test: The scoped attribute must apply the style information only to its parent element</title>
     <link rel="author" title="Intel" href="http://www.intel.com/">
     <link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/document-metadata.html#attr-style-scoped">
     <link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/document-metadata.html#the-style-element">
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
-    <meta name="assert" content="Check if the scoped attribute is implemented.">
     <style>
       #test {
         width: 50px;
@@ -37,7 +36,7 @@
         style.scoped = true;
         width2 = getStyle(testElement, "width");
         assert_equals(width2, "50px", "The width should not be applied.");
-      }, "style_scoped");
+      }, "The scoped attribute is present, the style information must be applied only to its parent element");
 
       function getStyle(obj, attr) {
         return document.defaultView.getComputedStyle(obj, false)[attr];
@@ -45,3 +44,4 @@
     </script>
   </body>
 </html>
+
