--- a/html/semantics/document-metadata/the-style-element/style_scoped_manual.html
+++ b/html/semantics/document-metadata/the-style-element/style_scoped_manual.html
@@ -2,28 +2,29 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>HTML Test: style_scoped_effect</title>
+    <title>HTML Test: The scoped attribute must apply the specified style information only to its parent element</title>
     <link rel="author" title="Intel" href="http://www.intel.com/">
     <link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/document-metadata.html#attr-style-scoped">
     <link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/document-metadata.html#the-style-element">
-    <meta name="assert" content="Check if the scoped attribute works well">
+    <meta name="assert" content="Check if the scoped attribute is applied the specified style information only to its parent element">
     <style>
       #test {
-        background-color:green;
-        height:100px;
-        width:100px;
+        background-color: green;
+        height: 100px;
+        width: 100px;
       }
     </style>
   </head>
   <body>
-    <p>Test passes if a green filled square is displayed.</p>
-    <div id="test"></div>
+    <p>Test passes if there is a filled green square and <strong>no red</strong>.</p>
     <div>
       <style scoped>
         #test {
-          background-color:red;
+          background-color: red;
         }
       </style>
     </div>
+    <div id="test"></div>
   </body>
 </html>
+
