--- a/contributors/adobe/submitted/css-compositing/svg/mix-blend-mode-svg-rectangle.html
+++ b/contributors/adobe/submitted/css-compositing/svg/mix-blend-mode-svg-rectangle.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CSS Compositing and Blending Test: mix-blend-mode for a simple SVG element - rectangle</title>
+		<title>CSS Test: mix-blend-mode for a simple SVG element - rectangle</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#csscompositingrules_SVG">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<p>There should be no red rectangle on the screen. <br>
-		   Test pases for an orange rectangle.</p>
+		   Test passes if you see an orange rectangle.</p>
 		<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="400px" height="400px" >
 			<rect x="0" y="0" width="100" height="100" fill="rgb(2,131,2)"/>
 			<rect x="0" y="0" width="100" height="100" fill="rgb(255,5,5)" style="mix-blend-mode: difference"/>
