update the colors to intuitive values

--- a/contributors/adobe/submitted/css-compositing/background-blending/background-blend-mode-gradient-image.html
+++ b/contributors/adobe/submitted/css-compositing/background-blending/background-blend-mode-gradient-image.html
@@ -12,16 +12,18 @@
 				margin: 5px;
 				width: 130px;
 				height: 130px;
-				background:  url('support/red.png') no-repeat 0 0 /100% 100%, linear-gradient(top, yellow 50%, green 51%);
+				background:  url('support/red.png') no-repeat 0 0 /100% 100%, linear-gradient(top, lime 50%, blue 51%);
+				/*lime: rgb(0,255,0);
+				blue: rgb(0,0,255);*/
 				display: block;
 				float: left;
-				background-blend-mode: screen, normal;
+				background-blend-mode: multiply, normal;
 			}
 		</style>
 	</head>
 	<body>
 		<p>Test passes if there is no red square on the screen. <br>
-		You should see an orange square below a yellow square.</p>
+		You should see a black square.</p>
 		<div></div>
 	</body>
 </html>
