--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-stacking-context-001.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-stacking-context-001.html
@@ -9,14 +9,14 @@
 		<link rel="match" href="reference/mix-blend-mode-stacking-context-001-ref.html">
 		<style>
 			.simple{
-				background: green;
+				background: aqua;/*rgb(0,255,255);*/
 				width: 140px;
 				height: 140px;
 				display:inline-block;
 			}
 			.mixed {
 				opacity: 0.9;
-				background: red;
+				background: red;/*rgb(255,0,0);*/
 				margin-top: 20px;
 				margin-left: 20px;
 				width: 100px;
@@ -26,7 +26,7 @@
 		</style>
 	</head>
 	<body>
-		<p>Test passes if you see a black rectangle with large green borders.
+		<p>Test passes if you see a black rectangle with large aqua borders.
 		You should not see a red rectangle on the page. </p>
 		<div class="simple">
 			<div class="mixed"></div>
