--- a/contributors/adobe/submitted/css-compositing/svg/mix-blend-mode-svg-rectangle.html
+++ b/contributors/adobe/submitted/css-compositing/svg/mix-blend-mode-svg-rectangle.html
@@ -10,10 +10,10 @@
 	</head>
 	<body>
 		<p>There should be no red rectangle on the screen. <br>
-		   Test passes if you see an orange rectangle.</p>
+		   Test passes if you see a black rectangle.</p>
 		<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="400px" height="400px" >
-			<rect x="0" y="0" width="100" height="100" fill="rgb(2,131,2)"/>
-			<rect x="0" y="0" width="100" height="100" fill="rgb(255,5,5)" style="mix-blend-mode: difference"/>
+			<rect x="0" y="0" width="100" height="100" fill="aqua"/>
+			<rect x="0" y="0" width="100" height="100" fill="red" style="mix-blend-mode: multiply"/>
 		</svg>
 	</body>
 </html>
