--- a/contributors/adobe/submitted/css-compositing/background-blending/background-blend-mode-gradient-image.html
+++ b/contributors/adobe/submitted/css-compositing/background-blending/background-blend-mode-gradient-image.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>CSS Test: blending between multiple backgrounds (gradient and image) using background-blend-mode</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
+		<link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
+		<link rel="reviewer" title="Rik Cabanier" href="mailto:cabanier@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#background-blend-mode">
 		<meta name="flags" content="">
 		<meta name="assert" content="Test checks that setting background-blend-mode property for an element with two background layers (a gradient and a png image) results in blending between the two layers.">
