--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parsing.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parsing.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>CSS Test: parsing mix-blend-mode property</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
+		<link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
+		<link rel="reviewer" title="Rik Cabanier" href="mailto:cabanier@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="dom">
 		<meta name="assert" content="Test checks that the value specified for mix-blend-mode property is correctly parsed">
