--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-stacking-context-001.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-stacking-context-001.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>CSS Test: mix-blend-mode between an element and its child</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
+		<link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
+		<link rel="reviewer" title="Rik Cabanier" href="mailto:cabanier@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="">
 		<meta name="assert" content="Test checks that the element with mix-blend-mode and opacity blends with the parent element">
