--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-stacking-context-creates-isolation.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-stacking-context-creates-isolation.html
@@ -4,6 +4,8 @@
 		<title>CSS Test: stacking context creates isolated group</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
+		<link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
+		<link rel="reviewer" title="Rik Cabanier" href="mailto:cabanier@adobe.com">
 		<meta name="flags" content="">
 		<meta name="assert" content="Test checks that properties that cause the creation of stacking context cause a group to be isolated">
 		<link rel="match" href="reference/mix-blend-mode-stacking-context-creates-isolation-ref.html">
