--- a/contributors/adobe/submitted/css-compositing/svg/mix-blend-mode-svg-rectangle.html
+++ b/contributors/adobe/submitted/css-compositing/svg/mix-blend-mode-svg-rectangle.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>CSS Test: mix-blend-mode for a simple SVG element - rectangle</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
+		<link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
+		<link rel="reviewer" title="Rik Cabanier" href="mailto:cabanier@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#csscompositingrules_SVG">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="svg">
