Fixed generate_resource location

--- a/resource-timing/test_resource_attribute_order.html
+++ b/resource-timing/test_resource_attribute_order.html
@@ -17,7 +17,7 @@ function setup_iframe() {
     d.getElementsByTagName('html')[0].appendChild(body);
 
     var image = d.createElement('img');
-    image.src = 'resources/generate_resource.php?type=image';
+    image.src = 'generate_resource.php?type=image';
     body.appendChild(image);
 }
 function onload_test() {
