--- a/2dcontext/drawing-paths-to-the-canvas/canvas_focus_drawCustomFocusRing_001.html
+++ b/2dcontext/drawing-paths-to-the-canvas/canvas_focus_drawCustomFocusRing_001.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>canvas drawCustomFocusRing test</title>
+    <title>canvas drawCustomFocusRing() step1 test</title>
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
     <link rel="stylesheet" href="/resources/testharness.css" media="all"/>
   </head>
   <body>
     <h1>Description</h1>
-    <p>This test checks whether drawCustomFocusRing return false if the element paased as an argument is not focused or is not a descendant of the element with whose context the method is associated.</p>
+    <p>This test checks whether drawCustomFocusRing return false if the element passed as an argument is not focused or is not a descendant of the element with whose context the method is associated.</p>
     <div id="log"></div>
     <div>
       <input type="text" id="text0">
