--- a/animation-timing/idlharness.html
+++ b/animation-timing/idlharness.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>idlharness test</title>
-<link rel="author" title="W3C" href="http://www.w3.org/" />
+<link rel="author" title="Kensaku Komatsu" href="mailto:kensaku.komatsu@gmail.com" />
 <link rel="help" href="http://www.w3.org/TR/animation-timing/#definitions"/>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
